Fix projects grid contnet alignment

--- a/css/main-content.css
+++ b/css/main-content.css
@@ -33,7 +33,6 @@
  .section {
      display: none;
      padding: 2rem;
-     max-width: 1200px;
      margin: 0 auto;
  }
 
